Curves with Extrude still show curve #59271

Closed
opened 2018-12-12 22:27:33 +01:00 by green giant · 8 comments

System Information
Operating system: Windows 10
Graphics card: Gtx 1070

Blender Version
Broken: 2.80 Beta Date: 2018-12-07 13:17
Worked: 2.79b

Short description of error
Curve objects with an extrude value show the extrude geometry but also still shows the source curve. The source curve's lines shows in that weird glitchy way that coincident geometry does. In previous versions of Blender this line disappears once you set an extrude value

Exact steps for others to reproduce the error

  • Delete everything from default scene
  • Add circle curve object
  • Set Extrude (Curve Panel -> Geometry -> Extrude) to a value of 1 (any non zero value)
  • Observe the speckled line running through the center of the object.
**System Information** Operating system: Windows 10 Graphics card: Gtx 1070 **Blender Version** Broken: 2.80 Beta Date: 2018-12-07 13:17 Worked: 2.79b **Short description of error** Curve objects with an extrude value show the extrude geometry but also still shows the source curve. The source curve's lines shows in that weird glitchy way that coincident geometry does. In previous versions of Blender this line disappears once you set an extrude value **Exact steps for others to reproduce the error** - Delete everything from default scene - Add circle curve object - Set Extrude (Curve Panel -> Geometry -> Extrude) to a value of 1 (any non zero value) - Observe the speckled line running through the center of the object.
Author

Added subscriber: @greengiant83

Added subscriber: @greengiant83
Member

Added subscribers: @brecht, @JacquesLucke

Added subscribers: @brecht, @JacquesLucke
Member

@brecht, was this changed intentionally?

@brecht, was this changed intentionally?

I don't think so, sounds like a drawing bug.

I don't think so, sounds like a drawing bug.
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Note if we would not display the curve [only the resulting geometry], that would also solve #62668 (Cannot select beveled curves in the viewport wherever the bevel is not visible if bevel start and/or end are set) ;)

Note if we would not display the curve [only the resulting geometry], that would also solve #62668 (Cannot select beveled curves in the viewport wherever the bevel is not visible if bevel start and/or end are set) ;)
Philipp Oeser self-assigned this 2019-11-04 10:34:14 +01:00
Philipp Oeser was unassigned by Dalai Felinto 2019-12-23 16:35:39 +01:00

This issue was referenced by 6da097136c

This issue was referenced by 6da097136cf4c287ce1e08acdaa8376dfae9a898
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Philipp Oeser self-assigned this 2020-02-12 18:46:45 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59271
No description provided.